--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>detect_human_chime</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The detect_human_chime package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="dan@todo.todo">dan</maintainer>
+  <maintainer email="dsato6363@gmail.com">Dan Sato</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
